--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "geo-io/interface": "^2.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "friendsofphp/php-cs-fixer": "^3.5",
+        "vimeo/psalm": "^4.18"
     },
     "autoload": {
         "psr-4": {
